feat: 밥친구 게시판 백엔드 API 및 데이터 모델 강화
- **데이터 모델(Entity/DTO) 정합성 확보:**
  - `board_mate_food` 테이블 스키마에 맞춰 `MateFoodPost` 엔티티를 정확히 재정의:
    - `writer` (작성자 닉네임) 필드 유지.
    - `kakao_user_id` 컬럼에 매핑되는 `KakaoUser` 엔티티와의 `@ManyToOne` 관계 추가.
  - `MatePostDto`에 `writer`, `kakaoUserId`, `writerAvatarUrl` 필드를 정확히 반영.
  - `MatePostDto.fromEntity()` 메서드에서 `writer` 필드를 `KakaoUser` 닉네임 또는 기존 `writer` 값으로 유연하게 매핑하도록 로직 개선.
  - `MatePostDto.toEntity()` 메서드에서 `writer` 필드도 엔티티로 전달하도록 변경.
- **서비스 계층(Service) 로직 강화:**
  - `MateFoodPostService`에 `KakaoUserRepository` 주입하여 `kakaoUserId` 기반 `KakaoUser` 조회 및 연동.
  - 게시글 생성(`createPost`) 시 `writer` 필드에 `KakaoUser`의 닉네임을 설정하고 `kakaoUser` 관계를 매핑.
  - 게시글 조회 시 `MatePostDto`에 작성자 닉네임(`writer`) 및 아바타(`writerAvatarUrl`) 정보 포함.
  - 게시글 수정(`updatePost`), 삭제(`deletePost`), 상태 변경(`updatePostStatus`) 시 `currentKakaoUserId`를 받아 작성자 기반 권한 검사 로직 추가.
- **컨트롤러(Controller) 엔드포인트 및 오류 처리 개선:**
  - `MateFoodPostController`의 `PUT`, `DELETE`, `PATCH` 엔드포인트에 `currentKakaoUserId` 파라미터 추가하여 서비스 계층에 전달.
  - 권한 부족(`IllegalArgumentException` 발생) 시 `403 Forbidden` 응답을 반환하도록 예외 처리 강화.
  - `CommentService`에서 `kakaoUserId`가 DB에 없는 경우 발생하는 `400 Bad Request` 문제 해결을 위한 `KakaoUser` 데이터 존재 여부 확인 로직 유지.
- **코드 정리:**
  - 모든 디버깅용 `System.out.println()` 및 `console.log()` 문 제거 완료.